using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_RUN = "run";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_CLOSE = "close";
    public const string ANIM_OPEN = "open";

    public const string TAG_BRICK = "Brick";
    public const string TAG_PLAYER = "Player";
    public const string TAG_BOT = "Bot";
    public const string TAG_STAGE = "Stage";
    public const string TAG_FINISH = "FinishBox";
    public const string TAG_ENDBOX = "EndBox";
    public const string TAG_UNTAGGED = "Untagged";
    public const string TAG_CYLINDER = "Cylinder";
    public const string TAG_ORDERBOX = "OrderBox";
}
